--- a/src/main/resources/templates/thymeleaf/result_work.html
+++ b/src/main/resources/templates/thymeleaf/result_work.html
@@ -30,7 +30,7 @@
 								</div>
 								<div id="collapse1" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading1">
 									<div class="panel-body">
-										<input type="radio" id="r33" name="authSq" value="1" class="searchOption" onclick="dealSearch()"/>
+										<input type="radio" id="r33" name="authSq" value="1" class="searchOption" onclick="dealSearch()" checked/>
 										<label for="r33"><span></span>Collector</label><br/>
 										<input type="radio" id="r44" name="authSq" value="2" class="searchOption" onclick="dealSearch()"/>
 										<label for="r44"><span></span>Artist</label>
@@ -47,7 +47,7 @@
 								</div>
 								<div id="collapse2" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading2">
 									<div class="panel-body">
-										<input type="checkbox" id="a11" name="dealSttsCd" value="TP" class="searchOption" onclick="dealSearch()"/>
+										<input type="checkbox" id="a11" name="dealSttsCd" value="TP" class="searchOption" onclick="dealSearch()" checked/>
 										<label for="a11"><span></span>진행 중인 거래</label><br/>
 										<input type="checkbox" id="a22" name="dealSttsCd" value="TC" class="searchOption" onclick="dealSearch()"/>
 										<label for="a22"><span></span>종료된 거래</label><br/>
@@ -783,8 +783,9 @@ $(".lg-my").click(function() {
  	  });
   
 });
- 
- 
+
+//최초 접속시 필터 정의 (콜렉터,전행중 거래)
+dealSearch('1', 'TP');
  
  
 /* 메뉴바 FIXED */
