--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artist.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artist.html
@@ -23,7 +23,7 @@
 			<!-- 대가 작가 -->
 			<div class="contents max-1500" id="div_masterArtist">
 				<div class="cont-title3">
-					<h3>대가 작가<span>1950년 이전 데뷔한 작가입니다.</span></h3>
+					<h3>대가<span>1950년 이전 데뷔한 작가입니다.</span></h3>
 					<!-- <a href="#" class="ct-more"><img src="resources/img/icon-p.jpg" /><span>more</span></a> -->
 				</div>
 				<div class="swi-box swi-show-4">
@@ -44,7 +44,7 @@
 			<!-- 원로 작가 -->
 			<div class="contents max-1500" id="div_seniorArtist">
 				<div class="cont-title3">
-					<h3>원로 작가<span>1951 ~ 1965년 데뷔한 작가입니다.</span></h3>
+					<h3>원로<span>1951 ~ 1965년 데뷔한 작가입니다.</span></h3>
 					<!-- <a href="#" class="ct-more"><img src="resources/img/icon-p.jpg" /><span>more</span></a> -->
 				</div>
 				<div class="swi-box swi-show-3">
@@ -65,7 +65,7 @@
 			<!-- 중견 작가 -->
 			<div class="contents max-1500" id="div_middleAgedArtist">
 				<div class="cont-title3">
-					<h3>중견 작가<span>1966 ~ 1979년 데뷔한 작가입니다.</span></h3>
+					<h3>중견<span>1966 ~ 1979년 데뷔한 작가입니다.</span></h3>
 					<!-- <a href="#" class="ct-more"><img src="resources/img/icon-p.jpg" /><span>more</span></a> -->
 				</div>
 				<div class="swi-box swi-show-2">
@@ -86,7 +86,7 @@
 			<!-- 신진 작가 -->
 			<div class="contents max-1500" id="div_upAndComingArtist">
 				<div class="cont-title3">
-					<h3>신진 작가<span>1980년 이후 데뷔한 작가입니다.</span></h3>
+					<h3>신진<span>1980년 이후 데뷔한 작가입니다.</span></h3>
 					<!-- <a href="#" class="ct-more"><img src="resources/img/icon-p.jpg" /><span>more</span></a> -->
 				</div>
 				<div class="swi-box swi-show-1">
