--- a/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
@@ -51,7 +51,6 @@
 <!-- 								<img src="resources/img/de/popo-1.png" /> -->
 <!-- 							</a> -->
 						</div>
-						
 						<table class="tstyle1">
 							<tr>
 								<th>제작년도</th>
@@ -765,19 +764,44 @@ function closeArtstInfoModal(){
 //거래 남은 시간 1초마다 계산해서 표현하기
 var dday = new Date(result.deal.dealEndngDateTime).getTime();
 
-setInterval(function() {
+var biddingInterval = setInterval(function() {
+	console.log("biddingInterval");
 	var today = new Date().getTime();
+	
 	if(today >= dday){
-		location.reload();
+		//location.reload();
+		//페이지 한번만 RELOAD 호출
+		 pageReload();
 	}
   	var gap = dday - today;
   	var day = Math.ceil(gap / (1000 * 60 * 60 * 24));
   	var hour = Math.ceil((gap % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60) - 1);
   	var min = Math.ceil((gap % (1000 * 60 * 60)) / (1000 * 60));
   	var sec = Math.ceil((gap % (1000 * 60)) / 1000);
-
-  	document.getElementById("dealCount").innerHTML = day + " 일 " + hour + " : " + min + " : " + sec;
+  	
+  	//객체 존재 확인
+  	if(document.getElementById('dealCount')){
+  			document.getElementById("dealCount").innerHTML = day + " 일 " + hour + " : " + min + " : " + sec;
+  	} else {
+  		//객체가 없다면 setInterval 중지한다.
+  		clearInterval(biddingInterval);
+  	}
+  	
 }, 1000);
+
+
+//페이지 한번만 RELOAD
+function pageReload(){
+	console.log("pageReload");
+	$(document).ready(function(){
+	    if(document.URL.indexOf("#")==-1){
+	    
+	        url = document.URL+"#";
+	        location = "#";
+	        location.reload(true);
+	    }
+	});
+}
 
 //응찰하기/구매하기 버튼 클릭
 function btn_purchaseOrBid_onclick(){
