--- a/src/main/resources/templates/thymeleaf/fo/mgz/insights.html
+++ b/src/main/resources/templates/thymeleaf/fo/mgz/insights.html
@@ -1,6 +1,17 @@
 <!DOCTYPE HTML>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
+
+    <meta charset="utf-8">
+	<title>딜링아트</title>
+	<meta name="keywords" content="미술,아트,경매,수수료,정찰,운송,보험,직거래,dealingart">
+	<meta name="description" content="개인간 미술품 거래 마켓플레이스">
+	<meta property="og:description" content="개인간 미술품 거래 마켓플레이스">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="DeailngArt">
+	<meta property="og:image" content="https://www.dealing-art.com/resources/img/DA_logo_og.png">
+	<meta property="og:url" content="https://www.dealing-art.com">
+	
     <style>
     	.head-wrap{border-bottom:#e9e9e9 1px solid;}
     	.swi-box::before{background-color:#f9f9f9;}
@@ -15,14 +26,7 @@
     
     <link rel="icon" type="image/png" href="/resources/img/favicon.png">
     
-    <meta charset="utf-8">
-	<title>딜링아트</title>
-	<meta name="keywords" content="미술,아트,경매,수수료,정찰,운송,보험,직거래,dealingart">
-	<meta name="description" content="개인간 미술품 거래 마켓플레이스">
-	<meta property="og:type" content="website">
-	<meta property="og:title" content="DeailngArt">
-	<meta property="og:image" content="https://www.dealing-art.com/resources/img/DA_logo_og.png">
-	<meta property="og:url" content="https://www.dealing-art.com">
+
     
 </head>
 
