--- a/src/main/resources/static/css/common_new.css
+++ b/src/main/resources/static/css/common_new.css
@@ -25,7 +25,8 @@ input[type="password"] {
 }
 .hidden, legend, caption{position: absolute;left: -9999em;}
 
-#container{width: 100%;height: auto;background-color: #ffffff;}
+/* #container{width: 100%;height: auto;background-color: #ffffff;} */
+#container{width: 100%;height: auto;background-color: #ffffff;margin-top:100px;}
 #container:after {content: "";display: block;clear: both;}
 #nav{width: 100%;height: 70px;border-top: 1px solid #e9e9e9;border-bottom: 1px solid #e9e9e9;}
 #nav ul li{float: left;width: 16.66666666666667%;text-align: center;font-size: 24px;color: #111111;font-weight: bold;padding-top: 16px;letter-spacing: -1.5px;}
@@ -570,10 +571,15 @@ input{-webkit-appearance:none;-webkit-border-radius:0;}
 .mypage_collectcreate_wrap .third form .public_nondis span{float: left;display: inline-block;font-size: 16px;font-weight: 500;color: #111111;width: 175px;}
 .mypage_collectcreate_wrap .third form .public_nondis span strong{color: #b81d2c;margin-right: 6px;visibility: hidden;}
 .mypage_collectcreate_wrap .third form .public_nondis ul li{float: left;width: 100px;}
-.mypage_collectcreate_wrap .third form .public_nondis ul li input[type="checkbox"] {display: none;}
-.mypage_collectcreate_wrap .third form .public_nondis ul li input[type="checkbox"] + label {position: relative;display: inline-block;width: 20px;height: 20px;background: #fff;border: 1px solid #ddd;cursor: pointer;border-radius: 9999px;}
-.mypage_collectcreate_wrap .third form .public_nondis ul li input[type="checkbox"]:checked + label {background: url("../img/mypage/ico_check.png") no-repeat 50% 50%;}
-.mypage_collectcreate_wrap .third form .public_nondis ul li input[type="checkbox"] + label span{position: absolute;top: -3px;left: 28px;font-size: 16px;font-weight: 300;color: #111111;width: 50px;}
+/* .mypage_collectcreate_wrap .third form .public_nondis ul li input[type="checkbox"] {display: none;} */
+/* .mypage_collectcreate_wrap .third form .public_nondis ul li input[type="checkbox"] + label {position: relative;display: inline-block;width: 20px;height: 20px;background: #fff;border: 1px solid #ddd;cursor: pointer;border-radius: 9999px;} */
+/* .mypage_collectcreate_wrap .third form .public_nondis ul li input[type="checkbox"]:checked + label {background: url("../img/mypage/ico_check.png") no-repeat 50% 50%;} */
+/* .mypage_collectcreate_wrap .third form .public_nondis ul li input[type="checkbox"] + label span{position: absolute;top: -3px;left: 28px;font-size: 16px;font-weight: 300;color: #111111;width: 50px;} */
+.mypage_collectcreate_wrap .third form .public_nondis ul li input[type="radio"] {display: block;}
+.mypage_collectcreate_wrap .third form .public_nondis ul li input[type="radio"] + label {position: relative;display: inline-block;width: 20px;height: 20px;background: #fff;border: 1px solid #ddd;cursor: pointer;border-radius: 9999px;}
+.mypage_collectcreate_wrap .third form .public_nondis ul li input[type="radio"]:checked + label {background: url("../img/mypage/ico_check.png") no-repeat 50% 50%;}
+.mypage_collectcreate_wrap .third form .public_nondis ul li input[type="radio"] + label span{position: absolute;top: -3px;left: 28px;font-size: 16px;font-weight: 300;color: #111111;width: 50px;}
+
 
 .mypage_collectcreate_wrap .third .sns_allow_sharing{padding: 20px 10px;}
 .mypage_collectcreate_wrap .third .sns_allow_sharing:after{display: block;clear: both;content: "";}
