--- a/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_exhint_detailpage.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_exhint_detailpage.html
@@ -122,7 +122,8 @@
     
     <script th:inline="javascript">
  	// 커뮤니티 순번
-	var comtSq = /*[[${param.SqNumber[0]}]]*/ 'default';
+	//var comtSq = <!--/* /*[[${param.SqNumber[0]}]]*/ */--> 'default';
+ 	var comtSq = 59;
  	var mbr = /*[[${exhibit.mbrSq}]]*/ 'default';
  	var comt = /*[[${exhibit}]]*/ 'default';
  	var otherComt = /*[[${otherComt}]]*/ 'default';
