--- a/src/main/resources/templates/thymeleaf/fo/community/community_works.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_works.html
@@ -90,6 +90,12 @@
 		input[type=number] {
 		  -moz-appearance: textfield;
 		}
+		
+		
+		
+		
+		
+		
     </style>
     
     <link rel="icon" type="image/png" href="/resources/img/favicon.png">
@@ -126,8 +132,8 @@
                     <div class="sel_form" style="display: inline-block; margin-left: 3px;">
                         <select name="comtWorkShpCd" id="comtWorkShpCd">
                             <option value="">형태</option>
-                            <option value="">평면</option>
-                            <option value="">입체</option>
+                            <option value="PLN">평면</option>
+                            <option value="SLD">입체</option>
                             <option value="">고미술</option>
                             <option value="">공예</option>
                         </select>
@@ -155,7 +161,8 @@
    	var comtSort = '';
    	var startDate = '';
    	var endDate = '';
-   
+	var comtWorkShpCd = '';
+   	
    	$(document).ready(function(){
    		// 리스트 데이터 뿌려주기
    		communityWorksList();
@@ -166,6 +173,13 @@
    		// 정렬 값 선택시 데이터 검색
    		$("#comtSort").on("change", function(){
    			comtSort = $(this).val();
+   			offset = 0;
+   			communityWorksList();
+   		});
+   		
+   		// 형태 값 선택시 데이터 검색
+   		$("#comtWorkShpCd").on("change", function(){
+   			comtWorkShpCd = $(this).val();
    			offset = 0;
    			communityWorksList();
    		});
@@ -191,6 +205,7 @@
    				comtTypCd: 'BOA',
    				offset: offset,
    				comtSort: comtSort, 
+   				comtWorkShpCd: comtWorkShpCd,
    				startDate: startDate,
    				endDate: endDate,
    				limit: 12
@@ -257,7 +272,7 @@
             }
    		});
    		
-   		$("#workspic_wrap .workspic_row").remove();
+   		$(".workspic_wrap .workspic_row").remove();
    		$(".workspic_wrap").prepend(strHtml);
    	}
    	
